Implement plot caching system and switch to completed games only
- Added plot caching system with historical preservation
- Pre-render plots to disk for fast loading
- Auto-commit cache to git in dev mode
- Switch from halftime/in-progress to completed games only
- Remove all real-time polling and refresh timers
- Simplify status checking (no scanning/throttling needed)
- Add incremental cache updates (preserve historical plots)
- Update .gitignore to exclude .pkl and metadata.json
- Add cache documentation (CACHE_SYSTEM.md)

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,12 @@ Thumbs.db
 *.parquet
 /data/
 
+# Plot cache (plots are small enough for git, but metadata can be regenerated)
+# Exclude .pkl files and metadata.json, but keep PNG files for git
+cache/plots/*.pkl
+cache/plots/metadata.json
+# Note: PNG files (*.png) are committed to git for historical cache
+
 # Logs
 *.log
 
