Simplify to hardcoded date (12/5/2025) and one-time cache build
- Hardcode date to 12/5/2025 (no date selector)
- Remove all status checking (no get_game_statuses calls)
- Remove UI selectors (date, board, game selector)
- One-time plot generation on first run
- After setup, all plots load from cache (no ESPN API calls)
- Remove status badges (all games are completed)
- Add status_cache.py module (for future use if needed)
- Simplified flow: fetch once, cache everything, fast gameplay

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,9 @@ cache/plots/*.pkl
 cache/plots/metadata.json
 # Note: PNG files (*.png) are committed to git for historical cache
 
+# Status cache (committed to git for speed - small file)
+# cache/game_statuses.json is committed to git
+
 # Logs
 *.log
 
