--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-streamlit>=1.28.0
+# Runtime dependencies (for running the game)
+pygame>=2.5.0
+Pillow>=9.0.0
+
+# Build-time dependencies (for generating cache)
 pandas>=1.5.0
 numpy>=1.23.0
 matplotlib>=3.6.0
